php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #60585 php build fails with USE flag snmp when IPv6 support is disabled
Submitted: 2011-12-21 13:44 UTC Modified: 2013-02-08 05:11 UTC
Votes:6
Avg. Score:3.7 ± 0.9
Reproduced:4 of 4 (100.0%)
Same Version:3 (75.0%)
Same OS:2 (50.0%)
From: sknizek at cyberport dot de Assigned: lytboris (profile)
Status: Closed Package: SNMP related
PHP Version: 5.4.0RC3 OS: Gentoo Linux
Private report: No CVE-ID: None
 [2011-12-21 13:44 UTC] sknizek at cyberport dot de
Description:
------------
I try to build php5.4.0rc3 on Gentoo with following USE flags:

bcmath bzip2 cgi cli crypt ctype curl fileinfo filter ftp gd gdbm hash iconv json mhash mysql mysqli nls pdo phar posix readline session simplexml snmp* sockets sqlite3 ssl threads tokenizer truetype unicode xml xmlreader xmlrpc xmlwriter zlib -apache2 -berkdb -calendar -cdb -cjk -curlwrappers -debug -doc -embed -enchant -exif -firebird -flatfile -fpm (-frontbase) -gmp -imap -inifile -intl -iodbc -ipv6 -kerberos -kolab -ldap -ldap-sasl -libedit -mssql -mysqlnd -oci8-instant-client -odbc -pcntl -pic -postgres -qdbm -recode -sharedmem -soap -spell (-sybase-ct) -sysvipc -tidy -wddx -xpm -xsl -zip

but it fails. As soon as I remove the snmp USE flag, the build works.
Versions:
 - net-snmp: 5.4.3
 - Net-SNMP: 6.0.1

Expected result:
----------------
php build with snmp support

Actual result:
--------------
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/ext/snmp/snmp.c: In function 'php_snmp_error':
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/ext/snmp/snmp.c:536:3: warning: passing argument 3 of 'zend_throw_exception_ex' from incompatible pointer type
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/Zend/zend_exceptions.h:44:17: note: expected 'void ***' but argument is of type 'char *'
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/ext/snmp/snmp.c:536:3: warning: passing argument 4 of 'zend_throw_exception_ex' from incompatible pointer type
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/Zend/zend_exceptions.h:44:17: note: expected 'char *' but argument is of type 'void ***'
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/ext/snmp/snmp.c: In function 'netsnmp_session_init':
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/ext/snmp/snmp.c:1174:10: error: request for member 'sa_family' in something not a structure or union
/var/tmp/portage/dev-lang/php-5.4.0_rc3/work/sapis-build/cli/ext/snmp/snmp.c:1178:3: error: incompatible type for argument 1 of 'inet_ntoa'
/usr/include/arpa/inet.h:54:14: note: expected 'struct in_addr' but argument is of type 'struct sockaddr **'
make: *** [ext/snmp/snmp.lo] Fehler 1
make: *** Warte auf noch nicht beendete Prozesse...

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-01-08 22:18 UTC] morusec at hotmail dot com
Same issue with 5.4.3_rc5, just can't compile php with snmp use flag. (net-snmp 5.3.4)


/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/ext/snmp/snmp.c: In function 'php_snmp_error':
/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/ext/snmp/snmp.c:536:3: warning: passing 
argument 3 of 'zend_throw_exception_ex' from incompatible pointer type
/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/Zend/zend_exceptions.h:44:17: note: expected 
'void ***' but argument is of type 'char *'
/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/ext/snmp/snmp.c:536:3: warning: passing 
argument 4 of 'zend_throw_exception_ex' from incompatible pointer type
/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/Zend/zend_exceptions.h:44:17: note: expected 
'char *' but argument is of type 'void ***'
/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/ext/snmp/snmp.c: In function 
'netsnmp_session_init':
/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/ext/snmp/snmp.c:1174:10: error: request for 
member 'sa_family' in something not a structure or union
/var/tmp/portage/dev-lang/php-5.4.0_rc5/work/sapis-build/cli/ext/snmp/snmp.c:1178:3: error: incompatible 
type for argument 1 of 'inet_ntoa'
/usr/include/arpa/inet.h:54:14: note: expected 'struct in_addr' but argument is of type 'struct sockaddr **'
make: *** [ext/snmp/snmp.lo] Error 1
 [2012-01-13 17:59 UTC] lytboris@php.net
-Assigned To: +Assigned To: lytboris
 [2012-01-13 18:30 UTC] lytboris@php.net
-Summary: php build fails with USE flag snmp +Summary: php build fails with USE flag snmp when IPv6 support is disabled
 [2012-01-13 18:33 UTC] lytboris@php.net
Automatic comment from SVN on behalf of lytboris
Revision: http://svn.php.net/viewvc/?view=revision&revision=322213
Log: Fixed bug #60585 (php build fails with USE flag snmp when IPv6 support is disabled)
Fixed bug #60749 (SNMP module should not strip non-standard SNMP port from hostname)
Fixed ipv6 test skipto if IPv6 support is disabled
 [2012-01-13 18:46 UTC] lytboris@php.net
Automatic comment from SVN on behalf of lytboris
Revision: http://svn.php.net/viewvc/?view=revision&revision=322214
Log: merge from trunk:
Fixed bug #60585 (php build fails with USE flag snmp when IPv6 support is disabled
Fixed bug #60749 (SNMP module should not strip non-standard SNMP port from hostname
 [2012-01-13 18:48 UTC] lytboris@php.net
Please try using this snapshot:

  http://snaps.php.net/php5.4-latest.tar.gz
 
For Windows:

  http://windows.php.net/snapshots/


 [2012-01-13 18:48 UTC] lytboris@php.net
-Status: Assigned +Status: Feedback
 [2012-04-18 09:46 UTC] laruence@php.net
Automatic comment on behalf of lytboris
Revision: http://git.php.net/?p=php-src.git;a=commit;h=583292ab221e98f1e9585412c515057626bccdd4
Log: Fixed bug #60585 (php build fails with USE flag snmp when IPv6 support is disabled) Fixed bug #60749 (SNMP module should not strip non-standard SNMP port from hostname) Fixed ipv6 test skipto if IPv6 support is disabled
 [2012-07-24 23:37 UTC] rasmus@php.net
Automatic comment on behalf of lytboris
Revision: http://git.php.net/?p=php-src.git;a=commit;h=583292ab221e98f1e9585412c515057626bccdd4
Log: Fixed bug #60585 (php build fails with USE flag snmp when IPv6 support is disabled) Fixed bug #60749 (SNMP module should not strip non-standard SNMP port from hostname) Fixed ipv6 test skipto if IPv6 support is disabled
 [2013-02-08 05:11 UTC] lytboris@php.net
-Status: Feedback +Status: No Feedback
 [2013-02-08 05:11 UTC] lytboris@php.net
No feedback was provided. The bug is being suspended because
we assume that you are no longer experiencing the problem.
If this is not the case and you are able to provide the
information that was requested earlier, please do so and
change the status of the bug back to "Open". Thank you.


 [2013-11-17 09:34 UTC] laruence@php.net
Automatic comment on behalf of lytboris
Revision: http://git.php.net/?p=php-src.git;a=commit;h=583292ab221e98f1e9585412c515057626bccdd4
Log: Fixed bug #60585 (php build fails with USE flag snmp when IPv6 support is disabled) Fixed bug #60749 (SNMP module should not strip non-standard SNMP port from hostname) Fixed ipv6 test skipto if IPv6 support is disabled
 [2013-11-17 09:34 UTC] laruence@php.net
-Status: No Feedback +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 11:00:01 2026 UTC